OO-5190: manual/automatic life cycle of business groups
Implements a workflow to manage the life cycle of business groups, use
the new presets in tables for the different groups searches